a password generator extension for extra security... enjoy!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p id="password-option-1"></p>
             <p id="password-option-2"></p>
         </div>
-        <p id="opt">Click to copy...</p>
+        <p id="opt">Click on the password to copy...</p>
     </div>
 
     <script src="script.js"></script>
